minor adjustment of the writing

--- a/Notebook_Pos_Self_Salience_APA.tex
+++ b/Notebook_Pos_Self_Salience_APA.tex
@@ -134,17 +134,15 @@ XXXX
 \hypertarget{participants.}{%
 \subsection{Participants.}\label{participants.}}
 
-All experiments (1a \textasciitilde{} 6b, except experiment 3b) reported in the current study were first finished between 2014 to 2016 in Tsinghua University, Beijing. Participants of these experiments were recruited in the local community. To increase the sample size so that each experiment has 50 or more valid data (Simmons, Nelson, \& Simonsohn, 2013), we recruited additional participants in Wenzhou University, Wenzhou, China in 2017 for experiment 1a, 1b, 4a, and 4b. Experiment 3b was finished in Wenzhou University in 2017. To have a better estimation of the effect size, we included the data from two experiments (experiment 7a, 7b) that were reported in Hu, Lan, Macrae, and Sui (2019) (See Table 1 for overview of these experiments).
-All participant were given informed consent and compensated for their time. These experiments were consistent with the \ldots{} Guidline and were approvaled by the ethic board in the Department of Tsinghua University.
+Most experiments (1a \textasciitilde{} 6b, except experiment 3b) reported in the current study were first finished between 2014 to 2016 in Tsinghua University, Beijing. Participants of these experiments were recruited in the local community. To increase the sample size so that each experiment has 50 or more valid data (Simmons, Nelson, \& Simonsohn, 2013), we recruited additional participants in Wenzhou University, Wenzhou, China in 2017 for experiment 1a, 1b, 4a, and 4b. Experiment 3b was finished in Wenzhou University in 2017. To have a better estimation of the effect size, we included the data from two experiments (experiment 7a, 7b) that were reported in Hu, Lan, Macrae, and Sui (2019) (See Table 1 for overview of these experiments).
+All participant received informed consent and compensated for their time. These experiments were approved by the ethic board in the Department of Tsinghua University.
 
 \hypertarget{design-and-procedure}{%
 \subsection{Design and Procedure}\label{design-and-procedure}}
 
-This series of experiments started to test the effect of instantly acquired moral valence on perceptual decision-making. For this purpose, we used the social associative learning paradigm (or self-tagging paradigm)(Sui, He, \& Humphreys, 2012), in which participants first learned the associations between geometric shapes and labels of person with different moral valence (e.g., in first three studies, the triangle, square, and circle and good person, neutral person, and bad person, respectively). The associations of the shapes and label were counterbalanced across participants. After learning phase, participants finished a practice phase to familiar with the task, in which they viewed one of the shapes upon the fixation while one of the labels below the fixation and judged whether the shape and the label matched the association they just learnt. When participants reached 60\% or higher accuracy at the end of the practicing session, they started the experimental task which was the same as in the practice phase. These experiments adopted a 2 (matchness: matched vs.~mismatched) by 3 (moral valence: good vs.~neutral vs.~bad) or a 2 (matchness: matched vs.~mismatched) by 2 (self-relevance: self vs.~other) by 3 (moral valence: good vs.~neutral vs.~bad) within-subject design. The dependent variables reported in this manuscript were reaction times and accuracy in the experimental task, i.e., the perceptual matching task.
-
-Across all experiment, experiment 1a, 1b, 1c, 2, and 6a shared the two by three within-subject design. Of which the experiment 1a was the first experiment and 1b, 1c, and 2 were to exclude other confounding variables' influence. More specifically, experiment 1b used different Chinese words as label to test whether the effect only occure with certain familiar words. Experiment 1c manipulated the moral valence indirectly: participants first learnt to associate different moral behaviors with different names, which is neutral at begining, after remembered the association, they then performed the perceptual matching task by associating names with different shapes. Experiment 2 tested whether the way we presented the stimuli influence the effect of valence, by sequently presenting labels and shapes. Note that part of participants of experiment 2 were from experiment 1a because we originally planned a cross task comparison. Experiment 6a, which shared the same design as experiment 2, was an EEG experiment which aimed at exploring the neural correlates of the effect. But we will focus on the behavioral results of experiment 6a in the current manuscript.
-
-For experiment 3a, 3b, 4a, 4b, 6b, 7a, and 7b, we added self-relevance as another within-subject variable. The experiment 3a directly extend experiment 1a in to a 2 (matchness: matched vs.~mismatched) by 2 (reference: self vs.~other) by 3 (moral valence: good vs.~neutral vs.~bad) within-subject design. Thus in experiment 3a, there were six conditions (good-self, neutral-self, bad-self, good-other, neutral-other, and bad-other) and six shapes (triangle, square, circle, diamond, pentagon, and trapezois). The experiment 6b was an EEG experiment extended from experiment 3a but presented the lable and shape sequentially. Because of the relatively high working memory load (six label-shape pairs), experiment 6b were conducted in two days: the first day participants finished perceptual matching task as a practice, and the second day, they finished the task again while the EEG signals were recorded. Experiment 3b was designed to separate the self-referential trials and other-referential trials. That is, participants finished two different blocks: in the self-referential blocks, they only response to good-self, neutral-self, and bad-self, with half of the trials was matched and half was not; for the other-reference blocks, they only reponded to good-other, neutral-other, and bad-other. Experiment 4a and 4b were design to test the automaticity of the binding between self/other and moral valence. In 4a, we used only two labels (self vs.~other) and two shapes (circle, square). To manipulate the moral valence, we added labels within the shape and instructed participants to ignore the presence of these moral related words. In 4b, we reversed self-referential and valence: participant learnt three labels (good-person, neutral-person, and bad-person) and three shapes (circle, square, and triangle), and the words \enquote{self} or \enquote{other} were presented in the shapes. As in 4a, participants were told to ignore the words inside the shape. Experiment 7a and 7b were designed to test the cross task robustness of the effect we observed in the aforementioned experiments (Hu et al., 2019). As we found that the neutral and bad conditions constantly show nonsignificant results, we only used two conditions of moral valence, i.e., good vs.~bad, in experiment 7a and 7b.
+This series of experiments started to test the effect of instantly acquired moral valence on perceptual decision-making. For this purpose, we used the social associative learning paradigm (or self-tagging paradigm)(Sui, He, \& Humphreys, 2012), in which participants first learned the associations between geometric shapes and labels of person with different moral valence (e.g., in first three studies, the triangle, square, and circle and good person, neutral person, and bad person, respectively). The associations of the shapes and label were counterbalanced across participants. After remembered the associations, participants finished a practice phase to familiar with the task, in which they viewed one of the shapes upon the fixation while one of the labels below the fixation and judged whether the shape and the label matched the association they learned. When participants reached 60\% or higher accuracy at the end of the practicing session, they started the experimental task which was the same as in the practice phase.
+The xperiment 1a, 1b, 1c, 2, and 6a shared a 2 (matchness: matched vs.~mismatched) by 3 (moral valence: good vs.~neutral vs.~bad) within-subject design. The experiment 1a was the first one of the whole series studies and 1b, 1c, and 2 were to exclude other confounding variables' influence. More specifically, experiment 1b used different Chinese words as label to test whether the effect only occure with certain familiar words. Experiment 1c manipulated the moral valence indirectly: participants first learnt to associate different moral behaviors with different names, which is neutral at begining, after remembered the association, they then performed the perceptual matching task by associating names with different shapes. Experiment 2 further tested whether the way we presented the stimuli influence the effect of valence, by sequently presenting labels and shapes. Note that part of participants of experiment 2 were from experiment 1a because we originally planned a cross task comparison. Experiment 6a, which shared the same design as experiment 2, was an EEG experiment which aimed at exploring the neural correlates of the effect. But we will focus on the behavioral results of experiment 6a in the current manuscript.
+For experiment 3a, 3b, 4a, 4b, 6b, 7a, and 7b, we included self-relevance as another within-subject variable in the experimental design. For example, the experiment 3a directly extend the desing of experiment 1a into a 2 (matchness: matched vs.~mismatched) by 2 (reference: self vs.~other) by 3 (moral valence: good vs.~neutral vs.~bad) within-subject design. Thus in experiment 3a, there were six conditions (good-self, neutral-self, bad-self, good-other, neutral-other, and bad-other) and six shapes (triangle, square, circle, diamond, pentagon, and trapezois). The experiment 6b was an EEG experiment extended from experiment 3a but presented the lable and shape sequentially. Because of the relatively high working memory load (six label-shape pairs), experiment 6b were conducted in two days: the first day participants finished perceptual matching task as a practice, and the second day, they finished the task again while the EEG signals were recorded. Experiment 3b was designed to separate the self-referential trials and other-referential trials. That is, participants finished two different blocks: in the self-referential blocks, they only response to good-self, neutral-self, and bad-self, with half of the trials was matched and half was not; for the other-reference blocks, they only reponded to good-other, neutral-other, and bad-other. Experiment 4a and 4b were design to test the automaticity of the binding between self/other and moral valence. In 4a, we used only two labels (self vs.~other) and two shapes (circle, square). To manipulate the moral valence, we added labels within the shape and instructed participants to ignore the words in the shape during the task. In 4b, we reversed the role of self-relevance and valence in the task: participant learnt three labels (good-person, neutral-person, and bad-person) and three shapes (circle, square, and triangle), and the words for self-relevance, \enquote{self} or \enquote{other}, were presented in the shapes. As in 4a, participants were told to ignore the words inside the shape during the task. Experiment 7a and 7b were designed to test the cross task robustness of the effect we observed in the aforementioned experiments (Hu et al., 2019). As we found that the neutral and bad conditions constantly show nonsignificant results, we only used two conditions of moral valence, i.e., good vs.~bad, in experiment 7a and 7b.
 
 Finally, experiment 5 was design to test the specificity of the moral valence. We extended experiment 1a with an additional independnet variable: domains of the valence words. More specifically, besides the moral valence, we also added valence from other domains: appearance of person (beautiful, neutral, ugly), apperance of a scene (beautiful, neutral, ugly), and emotion (happy, neutral, and sad). Label-shape pairs from different domains were separated into different blocks.
 
@@ -192,16 +190,11 @@ In most of these experiments, participant were also asked to fill a battery of q
 
 We reported all the measurements, analyses, and results in all the experiments in the current study. Participants whose overall accuracy lower than 60\% were excluded from analysis. Also, the accurate responses with less than 200ms reaction times were excluded from the analysis.
 
-All data were first pre-processed using R (Version 3.6.1; R Core Team, 2018) and the R-packages \emph{afex} (Version 0.25.1; Singmann, Bolker, Westfall, \& Aust, 2019), \emph{BayesFactor} (Version 0.9.12.4.2; Morey \& Rouder, 2018), \emph{boot} (Version 1.3.23; Davison \& Hinkley, 1997; Gerlanc \& Kirby, 2015), \emph{bootES} (Version 1.2; Gerlanc \& Kirby, 2015), \emph{coda} (Version 0.19.3; Plummer, Best, Cowles, \& Vines, 2006), \emph{corrplot2017} (Wei \& Simko, 2017), \emph{dplyr} (Version 0.8.3; Wickham et al., 2019), \emph{emmeans} (Version 1.4.3; Lenth, 2019), \emph{forcats} (Version 0.4.0; Wickham, 2019a), \emph{Formula} (Version 1.2.3; Zeileis \& Croissant, 2010), \emph{ggformula} (Version 0.9.2; Kaplan \& Pruim, 2019), \emph{ggplot2} (Version 3.2.1; Wickham, 2016), \emph{ggstance} (Version 0.3.3; Henry, Wickham, \& Chang, 2018), \emph{ggstatsplot} (Version 0.1.3; Patil \& Powell, 2018), \emph{here} (Version 0.1; Müller, 2017), \emph{Hmisc} (Version 4.3.0; Harrell Jr, Charles Dupont, \& others., 2019), \emph{lattice} (Version 0.20.38; Sarkar, 2008), \emph{lme4} (Version 1.1.21; Bates, Mächler, Bolker, \& Walker, 2015), \emph{lsmeans} (Version 2.30.0; Lenth, 2016), \emph{MASS} (Version 7.3.51.4; Venables \& Ripley, 2002), \emph{Matrix} (Version 1.2.17; Bates \& Maechler, 2019), \emph{MBESS} (Version 4.6.0; Kelley, 2018), \emph{mosaic} (Version 1.5.0; Pruim, Kaplan, \& Horton, 2017, 2018), \emph{mosaicData} (Version 0.17.0; Pruim et al., 2018), \emph{multcomp} (Version 1.4.10; Hothorn, Bretz, \& Westfall, 2008), \emph{mvtnorm} (Version 1.0.11; Genz \& Bretz, 2009), \emph{papaja} (Version 0.1.0.9842; Aust \& Barth, 2018), \emph{plyr} (Version 1.8.4; Wickham et al., 2019; Wickham, 2011), \emph{psych} (Version 1.8.12; Revelle, 2018), \emph{purrr} (Version 0.3.3; Henry \& Wickham, 2019), \emph{RColorBrewer} (Version 1.1.2; Neuwirth, 2014), \emph{readr} (Version 1.3.1; Wickham, Hester, \& Francois, 2018), \emph{reshape2} (Version 1.4.3; Wickham, 2007), \emph{stringr} (Version 1.4.0; Wickham, 2019b), \emph{survival} (Version 3.1.7; Terry M. Therneau \& Patricia M. Grambsch, 2000), \emph{TH.data} (Version 1.0.10; Hothorn, 2019), \emph{tibble} (Version 2.1.3; Müller \& Wickham, 2019), \emph{tidyr} (Version 1.0.0; Wickham \& Henry, 2019), and \emph{tidyverse} (Version 1.3.0; Wickham, 2017). Individual experiment's results were analyzed as in Sui et al. (2012). we analyzed the accuracy performance using a signal detection approach. The performance in each match condition was combined with that in the nonmatching condition with the same shape to form a measure of \emph{d'}. Trials without response were coded either as \enquote{miss} (matched trials) or \enquote{false alarm} (mismatched trials). The \emph{d'} were then analyzed using repeated measures analyses of variance (repeated measures ANOVA). The reaction times of accurate trials were also analyzed using repeated measures ANOVA. These analyses were based on the pre-processed data and finished byusing JASP (0.8.6.0, www.jasp-stats.org, Love et al., 2019). To control the false positive when conducting the post-hoc comparisons, we used Bonferroni correction. See supplementary materials for the results of each experiment's method and results, which included the significance test resuts, effect size (Bakeman, 2005; Lakens, 2013), and Bayes factor calculated by JASP (Hu, Kong, Wagenmakers, Ly, \& Peng, 2018; Wagenmakers et al., 2018).
+All data were first pre-processed using R (Version 3.6.1; R Core Team, 2018) and the R-packages \emph{afex} (Version 0.25.1; Singmann, Bolker, Westfall, \& Aust, 2019), \emph{BayesFactor} (Version 0.9.12.4.2; Morey \& Rouder, 2018), \emph{boot} (Version 1.3.23; Davison \& Hinkley, 1997; Gerlanc \& Kirby, 2015), \emph{bootES} (Version 1.2; Gerlanc \& Kirby, 2015), \emph{coda} (Version 0.19.3; Plummer, Best, Cowles, \& Vines, 2006), \emph{corrplot2017} (Wei \& Simko, 2017), \emph{dplyr} (Version 0.8.3; Wickham et al., 2019), \emph{emmeans} (Version 1.4.3; Lenth, 2019), \emph{forcats} (Version 0.4.0; Wickham, 2019a), \emph{Formula} (Version 1.2.3; Zeileis \& Croissant, 2010), \emph{ggformula} (Version 0.9.2; Kaplan \& Pruim, 2019), \emph{ggplot2} (Version 3.2.1; Wickham, 2016), \emph{ggstance} (Version 0.3.3; Henry, Wickham, \& Chang, 2018), \emph{ggstatsplot} (Version 0.1.3; Patil \& Powell, 2018), \emph{here} (Version 0.1; Müller, 2017), \emph{Hmisc} (Version 4.3.0; Harrell Jr, Charles Dupont, \& others., 2019), \emph{lattice} (Version 0.20.38; Sarkar, 2008), \emph{lme4} (Version 1.1.21; Bates, Mächler, Bolker, \& Walker, 2015), \emph{lsmeans} (Version 2.30.0; Lenth, 2016), \emph{MASS} (Version 7.3.51.4; Venables \& Ripley, 2002), \emph{Matrix} (Version 1.2.17; Bates \& Maechler, 2019), \emph{MBESS} (Version 4.6.0; Kelley, 2018), \emph{mosaic} (Version 1.5.0; Pruim, Kaplan, \& Horton, 2017, 2018), \emph{mosaicData} (Version 0.17.0; Pruim et al., 2018), \emph{multcomp} (Version 1.4.10; Hothorn, Bretz, \& Westfall, 2008), \emph{mvtnorm} (Version 1.0.11; Genz \& Bretz, 2009), \emph{papaja} (Version 0.1.0.9842; Aust \& Barth, 2018), \emph{plyr} (Version 1.8.4; Wickham et al., 2019; Wickham, 2011), \emph{psych} (Version 1.8.12; Revelle, 2018), \emph{purrr} (Version 0.3.3; Henry \& Wickham, 2019), \emph{RColorBrewer} (Version 1.1.2; Neuwirth, 2014), \emph{readr} (Version 1.3.1; Wickham, Hester, \& Francois, 2018), \emph{reshape2} (Version 1.4.3; Wickham, 2007), \emph{stringr} (Version 1.4.0; Wickham, 2019b), \emph{survival} (Version 3.1.7; Terry M. Therneau \& Patricia M. Grambsch, 2000), \emph{TH.data} (Version 1.0.10; Hothorn, 2019), \emph{tibble} (Version 2.1.3; Müller \& Wickham, 2019), \emph{tidyr} (Version 1.0.0; Wickham \& Henry, 2019), and \emph{tidyverse} (Version 1.3.0; Wickham, 2017). Individual experiment's results were analyzed as in Sui et al. (2012). we analyzed the accuracy performance using a signal detection approach. The performance in each match condition was combined with that in the nonmatching condition with the same shape to form a measure of \emph{d'}. Trials without response were coded either as \enquote{miss} (matched trials) or \enquote{false alarm} (mismatched trials). The \emph{d'} were then analyzed using repeated measures analyses of variance (repeated measures ANOVA). The reaction times of accurate trials were also analyzed using repeated measures ANOVA. These analyses were based on the pre-processed data and finished by using JASP (0.8.6.0, www.jasp-stats.org, Love et al., 2019). To control the false positive rate when conducting the post-hoc comparisons, we used Bonferroni correction. See supplementary materials for the results of each experiment's method and results, which included the significance test resuts, effect size (Bakeman, 2005; Lakens, 2013), and Bayes factor calculated by JASP (Hu, Kong, Wagenmakers, Ly, \& Peng, 2018; Wagenmakers et al., 2018).
 
-We analyzed and reported our results in following part:
+To have a better estimation of the effect size, we reported the synthesized results in five parts: valence effect, valence-self-relevance interaction, generalizability, specificity of valence effect, and behavior-questionnaire correlation analysis.
 
-\hypertarget{mini-meta-analysis-of-valence-effect}{%
-\subsubsection{Mini meta-analysis of valence effect}\label{mini-meta-analysis-of-valence-effect}}
-
-We reported the synthesized the effect across all experiments that tested the valence effect, using the mini meta-analysis approach (Goh, Hall, \& Rosenthal, 2016). More specifically, We synthesized effect size of \emph{d} prime and RT from experiment 1a, 1b, 1c, 2, 5 and 6a.
-
-Mini meta-analyses were carried out in R 3.6. As for the meta-analysis of the effect size of \emph{d}' and RTs, we used \enquote{metafor} package (Viechtbauer, 2010). We first calculated the mean of \emph{d}' and RT of each condition for each participant, then calculate the effect size (Cohen's \emph{d}) and variance of the effect size for all contrast we interested: Good v. Bad, Good v. Neutral, and Neutral v. Bad for the effect of valence, and self vs.~other for the effect of self-relevance. Cohen's \emph{d} and its variance were estimated using the following formula (Cooper, Hedges, \& Valentine, 2009):
+For the first two parts, we synthesized results from individual results by mini-meta-analysis (Goh, Hall, \& Rosenthal, 2016). The Mini meta-analyses were carried out in R 3.6, using the \enquote{metafor} package (Viechtbauer, 2010). We first calculated the mean of \emph{d}' and RT of each condition for each participant, then calculate the effect size (Cohen's \emph{d}) and variance of the effect size for all contrast we interested: Good v. Bad, Good v. Neutral, and Neutral v. Bad for the effect of valence, and self vs.~other for the effect of self-relevance. Cohen's \emph{d} and its variance were estimated using the following formula (Cooper, Hedges, \& Valentine, 2009):
 
 \[d = \frac {(M_{1} - M_{2})}{\sqrt {(sd_{1}^2 + sd_{2}^2) - 2*r*sd_{1}*sd_{2}}} * \sqrt {2*(1-r)}\]
 
@@ -209,15 +202,20 @@ Mini meta-analyses were carried out in R 3.6. As for the meta-analysis of the ef
 
 \(M_1\) is the mean of the first condition, \(sd_1\) is the standard deviation of the first condition, while \(M_2\) is the mean of the second condition, \(sd_2\) is the standard deviation of the second condition. \(r\) is the correlation coefficient between data from first and second condition. \(n\) is the number of data point (in our case the number of participants included in our research).
 
-To avoid the cases that some participants participated more than one experiments, we inspected the all available information of participants and only included participants' results from their first participation. As mentioned above, 24 participants were intentionally recruited to participate both exp 1a and exp 2, we only included their results from exp 1a in the meta-analysis.
+The effect size from each experiment were then synthesized by random effect model using metafor. Note that to avoid the cases that some participants participated more than one experiments, we inspected the all available information of participants and only included participants' results from their first participation. As mentioned above, 24 participants were intentionally recruited to participate both exp 1a and exp 2, we only included their results from exp 1a in the meta-analysis.
 
-\hypertarget{mini-meta-analysis-of-the-interaction-between-valence-and-self-reference}{%
-\subsubsection{Mini meta-analysis of the interaction between valence and self-reference}\label{mini-meta-analysis-of-the-interaction-between-valence-and-self-reference}}
+\hypertarget{valence-effect}{%
+\subsubsection{Valence effect}\label{valence-effect}}
 
-In this part, we used the same method to synthesize the results from experiment 3a, 3b, 6b, 7a, and 7b. These experiments explicitedly included both moral valence and self-reference.
+We synthesized effect size of \emph{d} prime and RT from experiment 1a, 1b, 1c, 2, 5 and 6a for the valence effect. We reported the synthesized the effect across all experiments that tested the valence effect, using the mini meta-analysis approach.
 
-\hypertarget{generalize-to-implicit-processing}{%
-\subsubsection{Generalize to implicit processing}\label{generalize-to-implicit-processing}}
+\hypertarget{valence-self-relevance-interaction}{%
+\subsubsection{Valence-self-relevance interaction}\label{valence-self-relevance-interaction}}
+
+The results from experiment 3a, 3b, 6b, 7a, and 7b. These experiments explicitedly included both moral valence and self-reference.
+
+\hypertarget{implicit-coupling-between-valence-and-self-relevance}{%
+\subsubsection{Implicit coupling between valence and self-relevance}\label{implicit-coupling-between-valence-and-self-relevance}}
 
 In the third part, we examined the change of effect size brought by change of design, with a focus on 4a and 4b, which were designed to examine the implicit effect of the interaction between moral valence and self-referential processing. We are interested in one particular question: will self-referential and morally positive valence had a mutual facilitation effect. That is, when moral valence (experiment 4a) or self-referential (experiment 4a) was presented as task-irrelevant stimuli, whether they would facilitate self-referential or valence effect on perceptual decision-making. For experiment 4a, we report the comparisons between different valence conditions under the self-referential task, not the other-referential task; for experiment 4b, we reported the comparison between the self- vs.~other-referential conditions for positive moral condition, not for the neutral or negative conditions. Note that the results were also analyzed in a standard repeated measure ANOVAs (see supplementary materials).
 
@@ -226,12 +224,11 @@ In the third part, we examined the change of effect size brought by change of de
 
 In this part, we reported the data from experiment 5, which included positive, neutral, and negative valence from four different domains: morality, aesthetic of person, aesthetic of scence, and emotion. This experiment was design to test whether the positive bias is specific to morality.
 
-\hypertarget{correlation-analysis-between-behavioral-task-and-self-report-measures}{%
-\subsubsection{Correlation analysis between behavioral task and self-report measures}\label{correlation-analysis-between-behavioral-task-and-self-report-measures}}
+\hypertarget{behavior-questionnaire-correlation}{%
+\subsubsection{Behavior-Questionnaire correlation}\label{behavior-questionnaire-correlation}}
 
 Finally, we explored correlation between results from behavioral results and self-reported measures.
-For the behavioral task part, we derived different indices. First, we used the mean and SD of the RT data from each participants of each condition. We included the RT variation because it has been shown to be meaningful as individual differences {[}Jensen, 1992; Ouyang et al., 2017{]}. Second, we used drift diffusion model to estimate four parameters of DDM for each participants. Third, we also calculated the differences between different conditions (valence effect: good-self vs.~bad-self, good-self vs.~neutral-self, bad-self vs.~neutral-self; good-other vs.~bad-other, good-other vs.~neutral-other, bad-other vs.~neutral-other; Self-reference effect: good-self vs.~good-other, neutral-self vs.~neutral-other, bad-self vs.~bad-other), as indexed by Cohen's d and se of Cohen's \emph{d}.
-
+For the behavioral task part, we derived different indices. First, we used the mean and SD of the RT data from each participants of each condition. We included the RT variation because it has been shown to be meaningful as individual differences {[}Jensen, 1992; Ouyang et al., 2017{]}. Second, we used drift diffusion model to estimate four parameters of DDM for each participants.
 The DDM analyses were finished by HDDM, as reported in Hu et al., (2019: \url{https://psyarxiv.com/9fczh/}). That is, we used the reponse code approach, matched response were coded as 1 and mismatched responses were coded as 0. To fully explore all parameters, we allow all four parameters of DDM free to vary. We then extracted the estimation of all the four parameters for each participants for the correlation analyses.
 
 For the questinnaire part, we are most interested in the self-rated distance between different person and self-evaluation related questionnaires: self-esteem, moral-self identity, and moral self-image. Other questionnaires (e.g., personality) were not planned to correlated with behavioral data were not included. Note that all data were reported in (Liu et al., 2020).
@@ -242,8 +239,8 @@ For the questinnaire part, we are most interested in the self-rated distance bet
 \hypertarget{effect-of-moral-valence}{%
 \subsection{Effect of moral valence}\label{effect-of-moral-valence}}
 
-\includegraphics{Notebook_Pos_Self_Salience_APA_files/figure-latex/plot_all_effect-1.pdf}
-In this part, we synthesized results from experiment 1a, 1b, 1c, 2, 5 and 6a. Data from 192 participants were included in these analysis. We found differences between positive and negative conditions on RT was Cohen's \emph{d} = -0.58 \(\pm\) 0.06, 95\% CI {[}-0.70 -0.47{]}; on \emph{d'} was Cohen's \emph{d} = 0.24 \(\pm\) 0.05, 95\% CI {[}0.15 0.34{]}. The effect was also observed between positive and neutral condition, RT: Cohen's \emph{d} = -0.44 \(\pm\) 0.10, 95\% CI {[}-0.63 -0.25{]}; \emph{d'}: Cohen's \emph{d} = 0.31 \(\pm\) 0.07, 95\% CI {[}0.16 0.45{]}. And the difference between neutral and bad conditions are not significant, RT: Cohen's \emph{d} = -0.15 \(\pm\) 0.07, 95\% CI {[}-0.30 0.00{]}; \emph{d'}: Cohen's \emph{d} = -0.07 \(\pm\) 0.07, 95\% CI {[}-0.21 0.08{]}. See Figure~@ref(fig:plot\_all\_effect) left panel.
+\includegraphics{Notebook_Pos_Self_Salience_APA_files/figure-latex/plot-all-effect-1.pdf}
+In this part, we synthesized results from experiment 1a, 1b, 1c, 2, 5 and 6a. Data from 192 participants were included in these analysis. We found differences between positive and negative conditions on RT was Cohen's \emph{d} = -0.58 \(\pm\) 0.06, 95\% CI {[}-0.70 -0.47{]}; on \emph{d'} was Cohen's \emph{d} = 0.24 \(\pm\) 0.05, 95\% CI {[}0.15 0.34{]}. The effect was also observed between positive and neutral condition, RT: Cohen's \emph{d} = -0.44 \(\pm\) 0.10, 95\% CI {[}-0.63 -0.25{]}; \emph{d'}: Cohen's \emph{d} = 0.31 \(\pm\) 0.07, 95\% CI {[}0.16 0.45{]}. And the difference between neutral and bad conditions are not significant, RT: Cohen's \emph{d} = -0.15 \(\pm\) 0.07, 95\% CI {[}-0.30 0.00{]}; \emph{d'}: Cohen's \emph{d} = -0.07 \(\pm\) 0.07, 95\% CI {[}-0.21 0.08{]}. See Figure \ref{fig:plot-all-effect} left panel.
 
 \hypertarget{interaction-between-valence-and-self-reference}{%
 \subsection{Interaction between valence and self-reference}\label{interaction-between-valence-and-self-reference}}
@@ -252,9 +249,9 @@ In this part, we combined the experiments that explicitly manipulated the self-r
 
 In most of these experiments, the interaction between self-reference and valence was signficant (see results of each experiment in supplementary materials). In the mini-meta-analysis, we analyzed the valence effect for self-referential condition and other-referential condition separately.
 
-For the self-referential condition, we found the same pattern as in the first part of results. That is we found significant differences between positive and neutral as well as positive and negative, but not neutral and negative. The effect size of RT between positive and negative is Cohen's \emph{d} = -0.89 \(\pm\) 0.12, 95\% CI {[}-1.11 -0.66{]}; on \emph{d'} was Cohen's \emph{d} = 0.61 \(\pm\) 0.09, 95\% CI {[}0.44 0.78{]}. The effect was also observed between positive and neutral condition, RT: Cohen's \emph{d} = -0.76 \(\pm\) 0.13, 95\% CI {[}-1.01 -0.50{]}; \emph{d'}: Cohen's \emph{d} = 0.69 \(\pm\) 0.14, 95\% CI {[}0.42 0.96{]}. And the difference between neutral and bad conditions are not significant, RT: Cohen's \emph{d} = -0.03 \(\pm\) 0.13, 95\% CI {[}-0.29 0.22{]}; \emph{d'}: Cohen's \emph{d} = -0.08 \(\pm\) 0.08, 95\% CI {[}-0.24 0.07{]}. See Figure \texttt{\textbackslash{}@ref(fig:plot\_all\_effect)} the middle panel.
+For the self-referential condition, we found the same pattern as in the first part of results. That is we found significant differences between positive and neutral as well as positive and negative, but not neutral and negative. The effect size of RT between positive and negative is Cohen's \emph{d} = -0.89 \(\pm\) 0.12, 95\% CI {[}-1.11 -0.66{]}; on \emph{d'} was Cohen's \emph{d} = 0.61 \(\pm\) 0.09, 95\% CI {[}0.44 0.78{]}. The effect was also observed between positive and neutral condition, RT: Cohen's \emph{d} = -0.76 \(\pm\) 0.13, 95\% CI {[}-1.01 -0.50{]}; \emph{d'}: Cohen's \emph{d} = 0.69 \(\pm\) 0.14, 95\% CI {[}0.42 0.96{]}. And the difference between neutral and bad conditions are not significant, RT: Cohen's \emph{d} = -0.03 \(\pm\) 0.13, 95\% CI {[}-0.29 0.22{]}; \emph{d'}: Cohen's \emph{d} = -0.08 \(\pm\) 0.08, 95\% CI {[}-0.24 0.07{]}. See Figure \ref{fig:plot-all-effect} the middle panel.
 
-For the other-referential condition, we found that only the difference between positive and negative on RT was significant, all the other conditions were not. The effect size of RT between positive and negative is Cohen's \emph{d} = -0.28 \(\pm\) 0.05, 95\% CI {[}-0.38 -0.17{]}; on \emph{d'} was Cohen's \emph{d} = -0.02 \(\pm\) 0.08, 95\% CI {[}-0.17 0.13{]}. The effect was also observed between positive and neutral condition, RT: Cohen's \emph{d} = -0.12 \(\pm\) 0.10, 95\% CI {[}-0.31 0.06{]}; \emph{d'}: Cohen's \emph{d} = 0.01 \(\pm\) 0.08, 95\% CI {[}-0.16 0.17{]}. And the difference between neutral and bad conditions are not significant, RT: Cohen's \emph{d} = -0.14 \(\pm\) 0.09, 95\% CI {[}-0.31 0.03{]}; \emph{d'}: Cohen's \emph{d} = -0.05 \(\pm\) 0.07, 95\% CI {[}-0.18 0.08{]}. See Figure @ref(fig:plot\_all\_effect) right panel.
+For the other-referential condition, we found that only the difference between positive and negative on RT was significant, all the other conditions were not. The effect size of RT between positive and negative is Cohen's \emph{d} = -0.28 \(\pm\) 0.05, 95\% CI {[}-0.38 -0.17{]}; on \emph{d'} was Cohen's \emph{d} = -0.02 \(\pm\) 0.08, 95\% CI {[}-0.17 0.13{]}. The effect was also observed between positive and neutral condition, RT: Cohen's \emph{d} = -0.12 \(\pm\) 0.10, 95\% CI {[}-0.31 0.06{]}; \emph{d'}: Cohen's \emph{d} = 0.01 \(\pm\) 0.08, 95\% CI {[}-0.16 0.17{]}. And the difference between neutral and bad conditions are not significant, RT: Cohen's \emph{d} = -0.14 \(\pm\) 0.09, 95\% CI {[}-0.31 0.03{]}; \emph{d'}: Cohen's \emph{d} = -0.05 \(\pm\) 0.07, 95\% CI {[}-0.18 0.08{]}. See Figure \ref{fig:plot-all-effect} right panel.
 
 \hypertarget{generalizibility-of-the-valence-effect}{%
 \subsection{Generalizibility of the valence effect}\label{generalizibility-of-the-valence-effect}}
